// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GoBackLinkContainer render with custom children 1`] = `
<LinkLikeButton
  onClick={[Function]}
>
  custom
</LinkLikeButton>
`;

exports[`GoBackLinkContainer render without props 1`] = `
<LinkLikeButton
  onClick={[Function]}
>
  go back
</LinkLikeButton>
`;
